...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ruleTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textStyle="bold" />

                <TextView
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/renameRuleButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_rename_setting" />
        </LinearLayout>

...
